--- a/app/src/main/res/layout/activity_webview.xml
+++ b/app/src/main/res/layout/activity_webview.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     tools:context="com.lichkin.framework.app.android.activities.LKWebViewActivity">
 
-    <WebView
+    <com.github.lzyzsd.jsbridge.BridgeWebView
         android:id="@+id/webview_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
