--- a/app/src/main/res/layout/news_item_2_top.xml
+++ b/app/src/main/res/layout/news_item_2_top.xml
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    style="@style/NewsContainerOut">
+    style="@style/news_container_out">
 
-    <LinearLayout style="@style/NewsContainerIn">
+    <LinearLayout style="@style/news_containter_in">
 
-        <LinearLayout style="@style/NewsImageContainer">
+        <LinearLayout style="@style/news_image_container">
 
             <ImageView
                 android:id="@+id/news_image_1"
-                style="@style/NewsImage"
+                style="@style/news_image"
                 android:layout_height="132dp"
                 android:layout_marginRight="3.75dp" />
 
             <ImageView
                 android:id="@+id/news_image_2"
-                style="@style/NewsImage"
+                style="@style/news_image"
                 android:layout_height="132dp"
                 android:layout_marginLeft="3.75dp" />
 
