--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="colorBackground">#EEEEEE</color>
+    <color name="colorForeground">#3F51B5</color>
+    <color name="colorBorder">#FF4081</color>
+
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
@@ -11,6 +15,6 @@
     <color name="colorProgressCenter">#339977</color>
     <color name="colorProgressEnd">#88bb66</color>
 
-    <color name="color_settings_layout_select">#3F51B5</color>
-    <color name="color_settings_layout_unselect">#FFFFFF</color>
+    <color name="color_settings_layout_select">@color/colorForeground</color>
+    <color name="color_settings_layout_unselect">@color/colorBackground</color>
 </resources>
