--- a/app/src/main/res/layout/score_fragment.xml
+++ b/app/src/main/res/layout/score_fragment.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     style="@style/form_container_out">
 
     <LinearLayout style="@style/form_container_in">
@@ -58,6 +59,15 @@
             android:id="@+id/btn"
             style="@style/button_button"
             android:text="@string/btn_positive_name_submit" />
+
+        <com.wang.avi.AVLoadingIndicatorView
+            android:id="@+id/loading"
+            style="@style/AVLoadingIndicatorView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            app:indicatorColor="@color/colorPrimary"
+            app:indicatorName="BallClipRotateIndicator" />
 
     </LinearLayout>
 
