--- a/app/src/main/res/values/styles-dynamic-buttons.xml
+++ b/app/src/main/res/values/styles-dynamic-buttons.xml
@@ -1,13 +1,13 @@
 <resources>
 
     <style name="dynamic_buttons_container_out">
-        <item name="android:layout_width">fill_parent</item>
+        <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_weight">1</item>
     </style>
 
     <style name="dynamic_buttons_container_in">
-        <item name="android:layout_width">fill_parent</item>
+        <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:orientation">vertical</item>
     </style>
@@ -20,7 +20,7 @@
     </style>
 
     <style name="dynamic_buttons_button_text">
-        <item name="android:layout_width">fill_parent</item>
+        <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:gravity">center</item>
         <item name="android:includeFontPadding">false</item>
