--- a/app/src/main/res/layout/comp_fragment.xml
+++ b/app/src/main/res/layout/comp_fragment.xml
@@ -1,13 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <LinearLayout
-        android:id="@+id/btns"
+    <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:paddingBottom="56dp" />
+        android:layout_height="match_parent">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:orientation="horizontal">
+
+            <LinearLayout
+                android:id="@+id/btns"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:paddingBottom="56dp" />
+
+            <TextView
+                android:id="@+id/loading_mask"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/colorLoadingBackground"
+                android:clickable="true"
+                android:focusable="true"
+                android:visibility="gone" />
+
+            <com.wang.avi.AVLoadingIndicatorView
+                android:id="@+id/loading"
+                style="@style/AVLoadingIndicatorView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:visibility="gone"
+                app:indicatorColor="@color/colorLoadingFront"
+                app:indicatorName="LineScalePartyIndicator" />
+
+        </RelativeLayout>
+
+    </android.support.constraint.ConstraintLayout>
 
 </ScrollView>
