--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,8 +7,26 @@
     android:layout_height="match_parent"
     tools:context="com.lichkin.application.activities.MainActivity">
 
+    <LinearLayout
+        android:id="@+id/titleBar"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:background="@color/colorPrimaryDark"
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center_vertical"
+            android:text="@string/app_name"
+            android:textSize="18sp"
+            android:layout_marginStart="12dp"
+            android:textColor="#FFFFFF" />
+    </LinearLayout>
+
     <android.support.v4.view.ViewPager
         android:id="@+id/viewpager"
+        android:layout_marginTop="48dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@+id/navigation" />
