--- a/app/src/main/res/layout/comp_fragment.xml
+++ b/app/src/main/res/layout/comp_fragment.xml
@@ -1,47 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-    <android.support.constraint.ConstraintLayout
+    <LinearLayout
+        android:id="@+id/title"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="40dp"
+        android:visibility="gone"
+        android:background="#FFFFFF"
+        android:orientation="vertical">
 
-        <RelativeLayout
+        <TextView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            android:orientation="horizontal">
+            android:layout_height="match_parent"
+            android:id="@+id/titleText"
+            android:gravity="center_vertical|center_horizontal"
+            android:textColor="@color/colorPrimaryDark" />
+    </LinearLayout>
 
-            <LinearLayout
-                android:id="@+id/btns"
+    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <android.support.constraint.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:paddingBottom="56dp" />
+                android:layout_gravity="bottom"
+                android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/loading_mask"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@color/colorLoadingBackground"
-                android:clickable="true"
-                android:focusable="true"
-                android:visibility="gone" />
+                <LinearLayout
+                    android:id="@+id/btns"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:paddingBottom="56dp" />
 
-            <com.wang.avi.AVLoadingIndicatorView
-                android:id="@+id/loading"
-                style="@style/AVLoadingIndicatorView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:visibility="gone"
-                app:indicatorColor="@color/colorLoadingFront"
-                app:indicatorName="LineScalePartyIndicator" />
+                <TextView
+                    android:id="@+id/loading_mask"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@color/colorLoadingBackground"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:visibility="gone" />
 
-        </RelativeLayout>
+                <com.wang.avi.AVLoadingIndicatorView
+                    android:id="@+id/loading"
+                    style="@style/AVLoadingIndicatorView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:visibility="gone"
+                    app:indicatorColor="@color/colorLoadingFront"
+                    app:indicatorName="LineScalePartyIndicator" />
 
-    </android.support.constraint.ConstraintLayout>
+            </RelativeLayout>
 
-</ScrollView>
+        </android.support.constraint.ConstraintLayout>
+
+    </ScrollView>
+</LinearLayout>
