--- a/app/src/main/res/layout/my_fragment.xml
+++ b/app/src/main/res/layout/my_fragment.xml
@@ -35,7 +35,8 @@
                 android:id="@+id/photo"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                app:srcCompat="@drawable/no_photo" />
+                app:srcCompat="@drawable/no_photo"
+                android:contentDescription="@string/photo_choose_title" />
 
             <LinearLayout
                 android:layout_width="0dp"
@@ -69,10 +70,11 @@
                 android:orientation="vertical">
 
                 <ImageView
-                    android:id="@+id/btn_ssignIn"
+                    android:id="@+id/btn_signIn"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    app:srcCompat="@drawable/sign_in" />
+                    app:srcCompat="@drawable/sign_in"
+                    android:contentDescription="@string/sign_in" />
 
                 <com.wang.avi.AVLoadingIndicatorView
                     android:id="@+id/loading"
