--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorBackground">#EEEEEE</color>
-    <color name="colorForeground">#3F51B5</color>
+    <color name="colorForeground">#17C400</color>
     <color name="colorBorder">#FF4081</color>
 
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimary">@color/colorForeground</color>
+    <color name="colorPrimaryDark">#2F2F2F</color>
     <color name="colorAccent">#FF4081</color>
 
     <color name="colorLoadingBackground">#aacacaca</color>
